--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
-baseURL: "https://admirable-halva-e668ef.netlify.app/"
+baseURL: "https://abolfazlarab.netlify.app/"
 languageCode: eg-us
-title: "Abolfazl Arab"
+title: "Abolfazl (Abe) Arab"
 theme: PaperMod
 
 params:
