--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: "https://abolfazlarab.netlify.app/"
 languageCode: eg-us
-title: "Abolfazl (Abe) Arab"
+title: Abolfazl (Abe) Arab
 theme: PaperMod
 
 params:
