--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ theme: PaperMod
 params:
   homeInfoParams:
     Title: "Hello / Salam"
-    Content: Welcome to my personal blog, here you can find info about Abolfazl (Abe) Arab.
+    Content: Welcome to my personal blog, here you can find info about Abolfazl (Abe) Arab!
   socialIcons:
     - name: twitter
       url: https://twitter.com/abe_bio
