--- a/config.yaml
+++ b/config.yaml
@@ -11,6 +11,6 @@ params:
     - name: twitter
       url: https://twitter.com/abe_bio
     - name: linkedin
-      url: https://linkedin.com/abolfazlarab
+      url: https://linkedin.com/in/abolfazlarab
     - name: github
-      url: https://github.com/abe_arab
+      url: https://github.com/abearab
