--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://abolfazlarab.netlify.app/"
+baseURL: "https://abolfazlarab.com/"
 languageCode: eg-us
 title: Abolfazl (Abe) Arab
 theme: PaperMod
